:ambulance: Fix the 'job_modal' 'monitoring_area_div' z-index issue.

--- a/t_system/remote_ui/www/static/resources/css/job_modal.css
+++ b/t_system/remote_ui/www/static/resources/css/job_modal.css
@@ -242,6 +242,8 @@
     border: #8d75a3 solid;
 
     transition: all 500ms;
+
+    z-index: 1;
 }
 
 
